tests/cases/lambdas/errors/err_fn_ref_effect.aipl
import { map, print, to_str } from builtins;

// Passing an effectful function to `map` charges its effect to the caller, just
// like an effectful lambda body would. `main` doesn't declare `!prints`.
fn shout(x: i64) !prints -> i64 {
    print(to_str(x));
    x
}

fn main() -> i64 {
    let xs = [1, 2, 3];
    let ys = xs.map(shout);
    3
}
--- errors ---
error: fn "shout" has effect "!prints" but the calling function does not declare it
  --> ./tests/cases/lambdas/errors/err_fn_ref_effect.aipl:12:21
   |
12 |     let ys = xs.map(shout);
   |                     ^^^^^
